# tpg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ExceptionsGranted.md  LICENSE  README.md  SConstruct  package-lock.json  requirements.txt  setting.sh  setup.sh  tailwind.config.ts
src/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  DEVCONTAINERS.md  Dockerfile  Makefile  README.md  SConscript  SConstruct  requirements.txt  setup.sh
src/.devcontainer/: Dockerfile  devcontainer.json
src/.gitlab/ci/: build.yml  lint.yml
src/.gitlab/ci/scripts/: process_linter.py
src/classic_control/: parameters.txt
src/classic_control_example/: parameters.txt
src/cmake/modules/: CodeCoverage.cmake
src/components/: EnvironmentCard.tsx  EnvironmentGrid.tsx  InfoLinks.tsx  Navbar.tsx  VisualizationPanel.tsx
src/configs/: 2025-02-05_TPG_MuJoco_Humanoid_Standup.txt  Classic_Control.yaml  MuJoCo_Half_Cheetah.yaml  MuJoCo_Inverted_Double_Pendulum.yaml  MuJoCo_Inverted_Pendulum.yaml  MuJoCo_MultiTask.yaml  MuJoCo_MultiTask_Half_Cheetah.yaml
src/configs/archive/: 2025-02-03-MuJoco_Reacher.txt  2025-02-05_TPG_MuJoco_Inverted_Double_Pendulum.txt
src/cpp/TPG/: ActionWrappers.h  CMakeLists.txt  MemoryEigen.h  RegisterMachine.cc  RegisterMachine.h  SConscript  TPG.cc  TPG.h  instruction.cc  instruction.h  memoryEigen.h  sequence_comparisons.h  team.cc  team.h  tpg_eval_mpi.h  unused_code_chunks.cpp
src/cpp/environments/: TaskEnv.h
src/cpp/environments/classicRL/: Acrobot.h  CartPole.h
src/cpp/environments/classic_control/: CMakeLists.txt  Pendulum.h
src/cpp/environments/mujoco/: MujocoEnv.h  Mujoco_Half_Cheetah_v4.h  Mujoco_Hopper_v4.h  Mujoco_Humanoid_Standup_v4.h  Mujoco_Inverted_Pendulum_v4.h  Mujoco_Reacher_v4.h
src/cpp/experiments/: EvalData.h  SConscript  TPGExperimentMPI.cc  evaluators_control.h  evaluators_forecast.h  evaluators_mujoco.h  phylogenetic_fitness.h
src/datasets/: MackyG17-397-1497.csv  SN_ms_tot_V2.0.csv
src/datasets/mujoco_models/: pusher.xml
src/engine/: RegisterMachine.cc  RegisterMachine.h  TPG.h  instruction.cc  sequence_comparisons.cc  sequence_comparisons.h  team.cc
src/environments/: TaskEnvFactory.cc
src/experiment_directories/classic_control/: parameters.txt
src/experiment_directories/classic_control_multitask/: parameters.txt
src/experiment_directories/control_and_forecast/: parameters.txt
src/experiment_directories/mujoco/: parameters.txt  parameters.txt_BACKUP  tpg-run-slurm.sh
src/experiment_directories/mujoco-Ant/: parameters.txt
src/experiment_directories/mujoco-HalfCheetah/: parameters.txt
src/experiment_directories/mujoco-HumanoidStandup/: parameters.txt
src/experiment_directories/mujoco-InvertedDoublePendulum/: parameters.txt
src/experiment_directories/mujoco-InvertedPendulum/: parameters.txt  tpg-run-slurm.sh
src/experiment_directories/mujoco-MultiTask/: MUJOCO_LOG.TXT  parameters.txt
src/experiment_directories/mujoco-MultiTaskHalfCheetah/: aux_0_MTA_0_p0.csv  aux_0_MTA_1_p0.csv  aux_0_MTA_2_p0.csv  aux_0_ST_0_p0.csv  aux_0_ST_1_p0.csv  aux_0_ST_2_p0.csv  aux_1_MTA_1_p0.csv  aux_2_MTA_1_p0.csv  aux_2_ST_0_p0.csv  aux_2_ST_1_p0.csv  aux_2_ST_2_p0.csv  parameters.txt  tpg-age-mt.csv  tpg-age-st-0.csv  tpg-age-st-1.csv  tpg-age-st-2.csv  tpg-auxDouble_MTA-minThresh.csv  tpg-genTimeCurve-eval.csv  tpg-genTimeCurve-sec.csv  tpg-gt-Lsize.csv  tpg-gt-MemSize.csv  tpg-gt-Msize.csv  tpg-gt-eLSz.csv  tpg-nDel.csv  tpg-pCount-st-0.csv  tpg-pCount-st-1.csv  tpg-pCount-st-2.csv  tpg-tCount-st-1.csv
src/experiment_directories/mujoco-Reacher/: parameters.txt
src/experiment_directories/mujoco-baselines/mujoco-HalfCheetah-2025-01-13-15-20-42-c3d84af/: aux_0_ST_0_p0.csv  aux_1_ST_0_p0.csv  aux_2_ST_0_p0.csv  tpg-age-mt.csv  tpg-age-st-0.csv  tpg-auxDouble_MTA-minThresh.csv  tpg-genTimeCurve-eval.csv  tpg-genTimeCurve-sec.csv  tpg-gt-Lsize.csv  tpg-gt-MemSize.csv  tpg-gt-Msize.csv  tpg-gt-eLSz.csv  tpg-nDel.csv  tpg-tCount-st-0.csv
src/experiment_directories/phylo_fit_estim/: parameters.txt
src/experiment_directories/recursive_forecasting/: parameters.txt
src/experiment_directories/recursive_forecasting/datasets/: ali_offset.csv  (+1 more)
src/experiments/evaluators/: EvalData.cc  EvalData.h  evaluators_control.h  evaluators_forecast.h  evaluators_mujoco.h
src/experiments/generic/: op_use_42.csv
src/experiments/hyper_parameters/: 2024-01-18_TPG_MuJoco_Half_Cheetah.txt  2024-01-18_TPG_MuJoco_Inverted_Double_Pendulum.txt  2025-02-03-Classic-Control.txt  2025-02-05_TPG_MuJoco_Inverted_Pendulum.txt  2025-02-05_TPG_MuJoco_MultiTask.txt  2025-02-05_TPG_MuJoco_MultiTask_Half_Cheetah.txt
src/experiments/runners/: training_runner.h
src/papers/GECCO_2025/: plot-learning.py
src/recursive_forecasting/datasets/: Mackey-1100.csv  SN_ms_tot_V2.0_Nov1834-June1926.csv
src/scripts/plot/: tpg-plot-evolution.py  tpg-plot-evolve.py  tpg-plot-learning.py  tpg-plot-stats.sh
src/scripts/run/: tpg-cleanup.sh  tpg-kill.sh  tpg-run-mpi.sh  tpg-run-slurm.sh  transform-multitask.py
src/src/: CMakeLists.txt  README.md  SConscript
src/src/api/: main.py
src/src/cli/: README.md  pyproject.toml
src/src/engine/: CMakeLists.txt  RegisterMachine.h  TPG.cc  TPG.h  instruction.h  sequence_comparisons.cc  sequence_comparisons.h  team.cc  team.h  tpg_eval_mpi.h
src/src/environments/: TaskEnvFactory.cc  TaskEnvFactory.h
src/src/experiments/: CMakeLists.txt
src/src/logging/: CMakeLists.txt
src/src/playground/: README.md  index.html
src/tests/: CMakeLists.txt  README.md  TPG_test.cc  mock_mujoco_env.h  mujoco_ant_test.cc  mujoco_env_test.cc  mujoco_half_cheetah_test.cc  mujoco_hopper_test.cc  mujoco_humanoid_standup_test.cc  mujoco_inverted_double_pendulum_test.cc  mujoco_inverted_pendulum_test.cc  mujoco_reacher_test.cc  register_machine_crossover_test.cc  team_crossover_test.cc
src/tpg/: README.md  SConstruct  requirements.txt
src/tpg/datasets/: MackyG17-397-1497.csv
src/tpg/parameter_configis/: 2024-05-22-a-control_and_forecast.txt  phylo-fit-estim-params.txt
src/tpg/phylo_fit_estim/: parameters.txt
(+318 files in other folders)
